# scifi-shooter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/: items.hg  items_og.hg  props.hg
assets/levels/: Level1.hgtmp  level0.hgtmp  level_1.hgtm  level_1.hgtmp  level_2.hgtmp  level_3.hgtmp  level_4.hgtmp  sandbox.hgtmp
assets/particles/: blood_hit.hgp  enemy_plasma_ball.hgp  explosion.hgp  plasma_ball.hgp  slime_blast.hgp  slime_explosion.hgp  test.hgp  wall_hit.hgp
assets/scripts/: DrawQuads.cpp  TestScript.cpp
assets/shaders/: batch_color.frag  batch_color.vert  batch_texture.frag  color.frag  color.vert  combined.frag  combined.vert  display.frag  display.vert  grid.frag  grid.vert  light.frag  light.vert  particle.frag  particle.vert  sprite.vert  text.frag  text.vert
assets/textures/: bug.hgss  slime.hgss
cmake/: FindHaGame.cmake  FindHaGame2.cmake
public/: package-lock.json  package.json
src/: console.h  constants.h  game.cpp  game.h  gamestate.cpp  gamestate.h  imgui_node.h  items.cpp  items.h  loading.cpp  loading.h  props.cpp  props.h  runtime.cpp  runtime.h  runtimeParams.h  scifiGame.cpp  scifiGame.h  utils.cpp  weapons.cpp  weapons.h
src/common/: console.cpp  console.h  constants.h  gamestate.cpp  gamestate.h  itemDef.cpp  itemDef.h  propDef.h  runtimeParams.h  ui.cpp  ui.h  utils.cpp  utils.h  weapons.cpp  weapons.h  worldObjectDef.h
src/components/: actor.h  ai.cpp  ai.h  connection.h  endPoint.h  explosive.h  inventory.h  item.cpp  item.h  light.cpp  light.h  projectile.h  prop.cpp  prop.h  requirementConnection.h  startPoint.h  tilemap.h  triggerConnection.h
src/enemies/: enemy.cpp  enemy.h  enemyState.h
src/enemies/behaviors/: canSee.cpp  canSee.h  correctPath.cpp  correctPath.h  explode.cpp  explode.h  findPath.cpp  findPath.h  moveOnPath.cpp  moveOnPath.h  moveTo.cpp  moveTo.h  randomLocation.cpp  randomLocation.h  tags.h  targetLocation.cpp  targetLocation.h
src/levelEditor/: assetBrowser.cpp  assetBrowser.h  componentExplorer.cpp  componentExplorer.h  entityTree.cpp  entityTree.h  entityViewer.cpp  entityViewer.h  events.cpp  events.h  fileBrowser.cpp  fileBrowser.h  scriptExplorer.cpp  scriptExplorer.h
src/levelEditor/tools/: itemTool.cpp  itemTool.h  propTool.cpp  propTool.h  selectedEntity.h  shaderTool.cpp  shaderTool.h  tilemapTool.cpp  tilemapTool.h  (+1 more)
src/scenes/: editorRuntime.cpp  editorRuntime.h  levelEditor.cpp  levelEditor.h  loading.cpp  loading.h  mainMenu.cpp  mainMenu.h  runtime.cpp  runtime.h  settings.cpp  settings.h
src/systems/: actors.cpp  actors.h  audio.cpp  audio.h  enemies.cpp  enemies.h  items.cpp  items.h  player.cpp  player.h  props.cpp  props.h  renderer.cpp  renderer.h  weapons.cpp  weapons.h  worldObjects.h
(+20 files in other folders)
